# minigrid-ai-comparison

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
configs/agents/: active_inference.yaml  actor_critic.yaml
configs/environments/: minigrid_8x8.yaml
scripts/: compare_agents.py  evaluate.py  train.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py
src/agents/active_inference/: __init__.py  ai_agent.py  efe_planner.py  world_model.py
src/agents/model_free/: __init__.py  actor_critic.py  networks.py
src/environments/: __init__.py  base_env.py  continuous_env.py  minigrid_env.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  visualization.py
src/training/: __init__.py  buffer.py  callbacks.py  trainer.py
src/utils/: __init__.py  config.py  logger.py  seeding.py
tests/: test_agents.py  test_environments.py
