[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minigrid-ai-comparison"
version = "0.1.0"
description = "Comparing Active Inference and RL agents in MiniGrid"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]